# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2016-05-24
  * Postgis writer : deprecate vacuum analyze as it may takes too much time,
    must be driven by the server, not the client

2016-05-21 mmichaud <m.michael.michaud@orange.fr>
  * Fix bugs in WritableDataStoreDataSource

2016-05-20 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
  * Add an improved version of Layer Properties plugin

2016-05-20 mmichaud <m.michael.michaud@orange.fr>
  * Rename LineSimplifyJTS15AlgorithmPlugIn to SimplifyWithJTSAlgorithm
    Now works for every kind of geometry and always use PreserveTopology version
  * SpatialDatabase : small patch to avoid trying to read wkt as wkb

2016-04-25 ede, Giuseppe
  * featreq 422: wfs layer, add SRIDStyle using loading crs's epsg id

2016-04-15 bertazza <bertazza@gmail>
  * Handling of .aux.xml files associated to tiff files changed: now if the
    .aux.xml file exists, the statistics are added to it, instead of just
    replacing its content.

2016-04-11 mmichaud <m.michael.michaud@orange.fr>
  * Fix a bug preventing updates with WritableDataSource in some cases

2016-04-09 mmichaud <m.michael.michaud@orange.fr>
  * Improve MakeValid plugin (correction of geometries in place)

2016-04-06 mmichaud <m.michael.michaud@orange.fr>
  * upgrade set-attribute plugin to v0.7.1
  * fix a regression introduced after 1.9.1 release in shapefile (cpg) reader

2016-04-05 ede
  * fix bug 414 "Image Layer Resizing lost after loading project"
    jml save files for referenced images ignored their saved geometry on reopen

2016-04-01 mmichaud <m.michael.michaud@orange.fr>
  * Upgrade cts plugin to 1.4.0 (add finnish projections, fix bugs)

2016-03-28 ede
  * upgraded junit & imageio-ext to latest stable versions

2016-03-26 mmichaud <m.michael.michaud@orange.fr>