@@ -3,6 +3,10 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2016-05-29 ede
+  * add a new PlugInClassLoader to keep all classes in one to circumvent issues
+    resulting in non working instanceof's or missing classes
+
 2016-05-24
   * Postgis writer : deprecate vacuum analyze as it may takes too much time,
     must be driven by the server, not the client
